--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "debug": "^2.1.3",
     "gengojs-core": "^0.0.1-beta.2",
     "gengojs-default-api": "^0.0.1-beta.1",
-    "gengojs-default-backend": "^0.0.1-beta.1",
+    "gengojs-default-memory": "^0.0.1-beta.1",
     "gengojs-default-handler": "^0.0.1-beta.1",
     "gengojs-default-header": "^0.0.1-beta.1",
     "gengojs-default-localize": "^0.0.1-beta.1",
