--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "The default parser plugin for gengojs.",
   "main": "index.js",
   "dependencies": {
+    "bind-fn": "^1.0.1",
     "closure": "^1.0.3",
     "debug": "^2.1.3",
     "gengojs-core": "^0.0.1-beta.2",
     "gengojs-default-api": "^0.0.1-beta.1",
-    "gengojs-default-memory": "^0.0.1-beta.1",
     "gengojs-default-handler": "^0.0.1-beta.1",
     "gengojs-default-header": "^0.0.1-beta.1",
     "gengojs-default-localize": "^0.0.1-beta.1",
+    "gengojs-default-memory": "^0.0.1-beta.1",
     "gengojs-default-router": "^0.0.1-beta.1",
     "intl-messageformat": "^1.1.0",
     "lodash": "^3.6.0",
