--- a/package.json
+++ b/package.json
@@ -5,15 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "bind-fn": "^1.0.1",
-    "closure": "^1.0.3",
     "debug": "^2.1.3",
-    "gengojs-core": "^0.0.1-beta.2",
-    "gengojs-default-api": "^0.0.1-beta.1",
-    "gengojs-default-handler": "^0.0.1-beta.1",
-    "gengojs-default-header": "^0.0.1-beta.1",
-    "gengojs-default-localize": "^0.0.1-beta.1",
-    "gengojs-default-memory": "^0.0.1-beta.1",
-    "gengojs-default-router": "^0.0.1-beta.1",
     "intl-messageformat": "^1.1.0",
     "lodash": "^3.6.0",
     "markdown-it": "^4.1.0",
@@ -30,7 +22,7 @@
     "load-grunt-tasks": "^3.1.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\""
+    "test": "grunt production"
   },
   "repository": {
     "type": "git",
