--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "scripts": {
     "test": "grunt production",
+    "prepublish": "grunt production"
   },
   "repository": {
     "type": "git",
