--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gengojs-default-parser",
-  "version": "0.0.1-beta.10",
+  "version": "0.0.1",
   "description": "The default parser plugin for gengojs.",
   "main": "index.js",
   "dependencies": {
@@ -12,6 +12,8 @@
     "string": "^3.1.1"
   },
   "devDependencies": {
+    "chai": "^2.3.0",
+    "gengojs-core": "0.0.1-beta.27",
     "grunt": "^0.4.5",
     "grunt-babel": "^5.0.0",
     "grunt-contrib-jshint": "^0.11.2",
