--- a/package.json
+++ b/package.json
@@ -4,22 +4,22 @@
   "description": "The default parser plugin for gengojs.",
   "main": "index.js",
   "dependencies": {
-    "debug": "^2.1.3",
+    "debug": "^2.2.0",
     "intl-messageformat": "^1.1.0",
-    "lodash": "^3.7.0",
-    "markdown-it": "^4.2.0",
+    "lodash": "^3.9.3",
+    "markdown-it": "^4.2.1",
     "sprintf-js": "^1.0.2",
-    "string": "^3.1.1"
+    "string": "^3.1.3"
   },
   "devDependencies": {
     "chai": "^2.3.0",
-    "gengojs-core": "0.0.1-beta.27",
+    "gengojs-core": "0.0.2",
     "grunt": "^0.4.5",
     "grunt-babel": "^5.0.0",
     "grunt-contrib-jshint": "^0.11.2",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-simple-mocha": "^0.4.0",
-    "load-grunt-tasks": "^3.1.0"
+    "load-grunt-tasks": "^3.2.0"
   },
   "scripts": {
     "test": "grunt production",
