--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "debug": "^2.2.0",
     "intl-messageformat": "^1.1.0",
-    "lodash": "*",
+    "lodash": "3.9.3",
     "markdown-it": "^4.2.1",
     "sprintf-js": "^1.0.2",
     "string": "^3.1.3"
