--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "The default parser plugin for gengojs.",
   "main": "index.js",
   "dependencies": {
-    "debug": "^2.2.0",
+    "gengojs-debug": "^2.0.4",
+    "gengojs-notation": "^1.0.1",
     "intl-messageformat": "^1.1.0",
     "lodash": "*",
     "markdown-it": "^4.2.1",
@@ -13,17 +14,21 @@
   },
   "devDependencies": {
     "chai": "^3.2.0",
-    "gengojs-core": "0.0.3",
-    "grunt": "^0.4.5",
-    "grunt-babel": "^5.0.0",
-    "grunt-contrib-jshint": "^0.11.2",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-simple-mocha": "^0.4.0",
-    "load-grunt-tasks": "^3.2.0"
+    "gengojs-core": "0.3.8",
+    "gulp": "^3.9.0",
+    "gulp-babel": "^5.2.1",
+    "gulp-changelog": "^1.0.0",
+    "gulp-gh-pages": "^0.5.2",
+    "gulp-jsbeautify": "^0.1.1",
+    "gulp-jshint": "^1.11.2",
+    "gulp-mocha": "^2.1.3",
+    "gulp-shell": "^0.4.3",
+    "gulp-sourcemaps": "^1.6.0",
+    "jshint-stylish": "^2.0.1",
+    "rimraf": "^2.4.3"
   },
   "scripts": {
-    "test": "grunt production",
-    "prepublish": "grunt production"
+    "test": "gulp test"
   },
   "repository": {
     "type": "git",
