--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gengojs-default-parser",
   "version": "0.0.4",
   "description": "The default parser plugin for gengojs.",
-  "main": "index.js",
+  "main": "src/index.js",
   "dependencies": {
     "gengojs-debug": "^2.0.4",
     "gengojs-notation": "^1.0.1",
